# among-us-counter

./: README.md
Conventional/: AmongUsCounter.ipynb
FastGenData/: .gitignore  Cargo.toml  README.md  bg  crewmate
FastGenData/src/: main.rs
GenData/: RGBmapping.txt  bggen.py  customSus.ipynb  draft1.py  draft2.py  draft3.py  draft4.py  label.txt  main.ipynb  main.py  nptest.py  osTest.ipynb  removeShadow.ipynb  test4.py  testCustomSus.py
GenData/test/: nptest2.py  nptest3.py  nptest4.py  test.py  test2.py  test3.py  test5.py  testImage.py
HOGSVM/: main.ipynb  test_only.ipynb
HOGSVM/Model/: model.joblib  model2.joblib
ML/: amoug.py  faster-rcnn evaluate.ipynb  mask-rcnn transfer.ipynb
