[package]
name = "FastGenData"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features=["derive"]}
color-eyre = "0.6.2"
image = "0.24.5"
imageproc = "0.23.0"
indicatif = { version = "0.17.2", features = ["rayon"] }
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.6.0"
